[!!!][TASK][#53] Default-Werte für verschiedene Felder entfernt

--- a/documentation/docs/base/030_Changelog/01_BreakingChanges/v4.0.0.md
+++ b/documentation/docs/base/030_Changelog/01_BreakingChanges/v4.0.0.md
@@ -1,4 +1,4 @@
-# Breaking Changes v4.0.0
+# Breaking Changes v4.0.0 - Base
 
 [TOC]
 
@@ -23,4 +23,194 @@ Ein Custom-Theme wird in der Verzeichnisstruktur stehts parallel zum Verzeichnis
 ├── app
 │   ├── backend
 │   └── frontend
+```
+
+# Breaking Changes v4.0.0 - EXT:starter
+
+## Default-Werte für Schriftgröße der Überschrift (tx_starter_headerfontsize)
+
+- Ticket [#53](https://gitlab.com/starterteam/team/base/-/issues/53)
+
+### Beschreibung
+
+Für die "Überschrift Schriftgröße" (tx_starter_headerfontsize) wurden die Default-Werte entfernt. Je nach eingesetztem
+CSS-Framework unterscheiden sich die Werte, sodass eine Verallgemeinerung nicht möglich ist.
+
+#### Ursprüngliche Werte
+
+- o-header--size-h1
+- o-header--size-h2
+- o-header--size-h3
+- o-header--size-h4
+- o-header--size-h5
+- o-header--size-h6
+- o-header--size-p
+
+#### Migration für bestehende Projekte
+
+Mittels PageTsConfig können die ursprünglichen Werte für ein bestehendes Projekt wieder implementiert werden
+
+```
+TCEFORM {
+    tt_content {
+        tx_starter_headerfontsize {
+            addItems {
+                o-header--size-h1 = wie Level 1
+                o-header--size-h2 = wie Level 2
+                o-header--size-h3 = wie Level 3
+                o-header--size-h4 = wie Level 4
+                o-header--size-h5 = wie Level 5
+                o-header--size-h6 = wie Level 6
+                o-header--size-p = wie Text
+            }
+        }
+    }
+}
+```
+
+## Default-Werte für Höhe (tx_starter_height)
+
+- Ticket [#53](https://gitlab.com/starterteam/team/base/-/issues/53)
+
+### Beschreibung
+
+Für die "Höhe" (tx_starter_height) wurden die Default-Werte entfernt. Je nach eingesetztem
+CSS-Framework unterscheiden sich die Werte, sodass eine Verallgemeinerung nicht möglich ist.
+
+#### Ursprüngliche Werte
+
+- height-25vh
+- height-33vh
+- height-50vh
+- height-66vh
+- height-75vh
+- height-100vh
+
+#### Migration für bestehende Projekte
+
+Mittels PageTsConfig können die ursprünglichen Werte für ein bestehendes Projekt wieder implementiert werden
+
+```
+TCEFORM {
+    tt_content {
+        tx_starter_height {
+            addItems {
+                height-25vh = 25% Browserfenster
+                height-33vh = 33% Browserfenster
+                height-50vh = 50% Browserfenster
+                height-66vh = 66% Browserfenster
+                height-75vh = 75% Browserfenster
+                height-100vh = 100% Browserfenster
+            }
+        }
+    }
+}
+```
+
+## Zusatz-Werte für Abstand davor (space_before_class)
+
+- Ticket [#53](https://gitlab.com/starterteam/team/base/-/issues/53)
+
+### Beschreibung
+
+Für das TYPO3-Core Feld "Abstand davor (space_before_class)" wurden die zusätzlich hinzugefügten Werte entfernt. Je nach
+genutztem CSS-Framework oder Custom-CSS ist eine Vereinheitlichung der Werte nicht möglich.
+
+#### Ursprüngliche Werte
+
+- u-gap-top--none
+- u-gap-top--small
+- u-gap-top--medium
+- u-gap-top--large
+- u-gap-top--xlarge
+
+#### Migration für bestehende Projekte
+
+Mittels PageTsConfig können die ursprünglichen Werte für ein bestehendes Projekt wieder implementiert werden
+
+```
+TCEFORM {
+    tt_content {
+        space_before_class {
+            addItems {
+                u-gap-top--none = Kein Abstand
+                u-gap-top--small = Small
+                u-gap-top--medium = Medium
+                u-gap-top--large = Large
+                u-gap-top--xlarge = XLarge
+            }
+        }
+    }
+}
+```
+
+## Zusatz-Werte für Abstand danach (space_after_class)
+
+- Ticket [#53](https://gitlab.com/starterteam/team/base/-/issues/53)
+
+### Beschreibung
+
+Für das TYPO3-Core Feld "Abstand danach (space_after_class)" wurden die zusätzlich hinzugefügten Werte entfernt. Je nach
+genutztem CSS-Framework oder Custom-CSS ist eine Vereinheitlichung der Werte nicht möglich.
+
+#### Ursprüngliche Werte
+
+- u-gap-bottom--none
+- u-gap-bottom--small
+- u-gap-bottom--medium
+- u-gap-bottom--large
+- u-gap-bottom--xlarge
+
+#### Migration für bestehende Projekte
+
+Mittels PageTsConfig können die ursprünglichen Werte für ein bestehendes Projekt wieder implementiert werden
+
+```
+TCEFORM {
+    tt_content {
+        space_before_class {
+            addItems {
+                u-gap-bottom--none = Kein Abstand
+                u-gap-bottom--small = Small
+                u-gap-bottom--medium = Medium
+                u-gap-bottom--large = Large
+                u-gap-bottom--xlarge = XLarge
+            }
+        }
+    }
+}
+```
+
+## Zusatz-Werte für Ausrichtung der Überschrift (header_position)
+
+- Ticket [#53](https://gitlab.com/starterteam/team/base/-/issues/53)
+
+### Beschreibung
+
+Für das TYPO3-Core Feld "Ausrichtung der Überschrift (header_position)" wurden die zusätzlich hinzugefügten Werte
+entfernt und die von TYPO3-Core gelieferten Werte wieder aktiviert.
+
+#### Ursprüngliche Werte
+
+- o-header--align-center
+- o-header--align-right
+- o-header--align-left
+
+#### Migration für bestehende Projekte
+
+Mittels PageTsConfig können die ursprünglichen Werte für ein bestehendes Projekt wieder implementiert werden
+
+```
+TCEFORM {
+    tt_content {
+        header_position {
+            removeItems = center,right,left
+            addItems {
+                o-header--align-center = Mitte
+                o-header--align-right = Rechts
+                o-header--align-left = Links
+            }
+        }
+    }
+}
 ```
