--- a/documentation/docs/base/030_Changelog/v4.0.0.md
+++ b/documentation/docs/base/030_Changelog/v4.0.0.md
@@ -4,6 +4,14 @@
 
 - [Liste aller BreakingChanges](01_BreakingChanges/v4.0.0) inkl. detaillierter Beschreibung
 
+### EXT:starter
+
+- Default-Werte für "Schriftgröße der Überschrift (tx_starter_headerfontsize)" entfernt
+- Default-Werte für "Höhe (tx_starter_height)" entfernt
+- Zusätzliche Werte für "Abstand davor (space_before_class)" entfernt
+- Zusätzliche Werte für "Abstand danach (space_after_class)" entfernt
+- Zusatz-Werte für Ausrichtung der Überschrift (header_position) auf TYPO3-Core Standard zurückgesetzt
+
 ## Features in v4.0.0
 
 ## Fehlerbehebungen in v4.0.0
