--- a/documentation/docs/base/030_Changelog/v4.0.0.md
+++ b/documentation/docs/base/030_Changelog/v4.0.0.md
@@ -14,6 +14,10 @@
 
 ## Features in v4.0.0
 
+### EXT:starter
+
+- [#74](https://gitlab.com/starterteam/team/base/-/issues/74) Neue Option um zu bestimmen, ob ein Hintergrund (auch Gradient) nur die Breite des Content Elements oder die volle Bildschirmbreite ein nimmt
+
 ## Fehlerbehebungen in v4.0.0
 
 **Vollständige Liste der Änderungen:**
