[FEATURE][#75] Option die Sichtbarkeit von Element auf BreakPoints zu bestimmen

--- a/documentation/docs/base/030_Changelog/v4.0.0.md
+++ b/documentation/docs/base/030_Changelog/v4.0.0.md
@@ -17,6 +17,7 @@
 ### EXT:starter
 
 - [#74](https://gitlab.com/starterteam/team/base/-/issues/74) Neue Option um zu bestimmen, ob ein Hintergrund (auch Gradient) nur die Breite des Content Elements oder die volle Bildschirmbreite ein nimmt
+- [#75](https://gitlab.com/starterteam/team/base/-/issues/75) Neue Option um Inhalte erst oder nur auf bestimmten ViewPorts anzuzeigen
 
 ## Fehlerbehebungen in v4.0.0
 
