--- a/app/backend/packages/starter_freya/Resources/Private/Language/de.locallang_csh_ttcontent.xlf
+++ b/app/backend/packages/starter_freya/Resources/Private/Language/de.locallang_csh_ttcontent.xlf
@@ -9,6 +9,14 @@
 				<source>Defines how the width of the content should behave on different screen sizes.</source>
 				<target>Definiert wie sich die Breite des Inhalts auf unterschiedlichen Bildschirmgrößen verhalten soll.</target>
 			</trans-unit>
+			<trans-unit id="space_before_class.description">
+				<source>A content item's space from its previous content item can be increased or decreased with this option.</source>
+				<target>Abstand eines Inhaltselements zu seinem vorherigen Inhaltselement kann mit dieser Option vergrößert oder verkleiner werden.</target>
+			</trans-unit>
+			<trans-unit id="space_after_class.description">
+				<source>The space between a content element and its subsequent content element can be increased or decreased with this option.</source>
+				<target>Abstand eines Inhaltselements zu seinem nachfolgenden Inhaltselement kann mit dieser Option vergrößert oder verkleiner werden.</target>
+			</trans-unit>
 
 		</body>
 	</file>
