--- a/app/backend/packages/starter_freya/Resources/Private/Language/locallang_csh_ttcontent.xlf
+++ b/app/backend/packages/starter_freya/Resources/Private/Language/locallang_csh_ttcontent.xlf
@@ -8,6 +8,12 @@
 			<trans-unit id="tx_starter_width.description">
 				<source>Defines how the width of the content should behave on different screen sizes.</source>
 			</trans-unit>
+			<trans-unit id="space_before_class.description">
+				<source>A content item's space from its previous content item can be increased or decreased with this option.</source>
+			</trans-unit>
+			<trans-unit id="space_after_class.description">
+				<source>The space between a content element and its subsequent content element can be increased or decreased with this option.</source>
+			</trans-unit>
 
 		</body>
 	</file>
