--- a/app/backend/packages/starter/Resources/Private/Language/de.locallang_be.xlf
+++ b/app/backend/packages/starter/Resources/Private/Language/de.locallang_be.xlf
@@ -31,6 +31,10 @@
 			<trans-unit id="pages.tx_starter_nav_media">
 				<target>Bild für Navigation</target>
 			</trans-unit>
+			<trans-unit id="pages.tx_starter_breadcrumb">
+				<source>Breadcrumb</source>
+				<target>Breadcrumb</target>
+			</trans-unit>
 
 <!-- label sys_file_reference -->
 			<trans-unit id="sys_file_reference.tx_starter_class">
