[FEATURE][#108] Integrate new content element CE-Portfolio FileCollections

--- a/documentation/docs/base/030_Changelog/v4.1.0.md
+++ b/documentation/docs/base/030_Changelog/v4.1.0.md
@@ -20,7 +20,7 @@
 ### EXT:starter-nessa
 
 - [#59](https://gitlab.com/starterteam/team/base/-/issues/59) CTA-Felder aus EXT:starter werden verwendet
-
+- [#108](https://gitlab.com/starterteam/team/base/-/issues/108) CE-Portfolio FileCollection
 
 ## Fehlerbehebungen in v4.1.0
 
