[DOC] Changelog für Version 4.1.0 hinzugefügt

--- a/documentation/docs/base/030_Changelog/v4.1.0.md
+++ b/documentation/docs/base/030_Changelog/v4.1.0.md
@@ -1,27 +1,44 @@
-# Changelog - v4.1.0 (unreleased)
+# Changelog - v4.1.0 (01.04.2023)
 
 ## BreakingChanges in v4.1.0
 
 - [Liste aller BreakingChanges](01_BreakingChanges/v4.1.0) inkl. detaillierter Beschreibung
 
-### EXT:starter
-
-
-
 ## Features in v4.1.0
 
 ### Base
 
-
+- Update auf DDEV 1.21.4
+- Update TYPO3-CMS auf Version 11.5.24
+- Unterstützung von PHP 8.1
 
 ### EXT:starter
 
+- Unterstützung von PHP 8.1
+
+### EXT:starter-twig
+
+- [#110](https://gitlab.com/starterteam/team/base/-/issues/110) Fehlerhafte Bildgenerierung abfangen
+- Unterstützung von PHP 8.1
+
+### EXT:starter-twig-news
+
+- neues StarterTeam Package zur Integration von EXT:news mit Twig-Templates
 
 ### EXT:starter-nessa
 
 - [#59](https://gitlab.com/starterteam/team/base/-/issues/59) CTA-Felder aus EXT:starter werden verwendet
 - [#108](https://gitlab.com/starterteam/team/base/-/issues/108) CE-Portfolio FileCollection
+- Unterstützung von PHP 8.1
+
+### EXT:starter-freya
+
+- Unterstützung von PHP 8.1
 
 ## Fehlerbehebungen in v4.1.0
 
-**Vollständige Liste der Änderungen:**
+### EXT:starter-nessa
+
+- [#111](https://gitlab.com/starterteam/team/base/-/issues/111) UpgradeWizard schlägt fehlt, wenn Felder nicht vorhanden
+
+**Vollständige Liste der Änderungen:** [4.0.0..4.1.0](https://gitlab.com/starterteam/team/base/-/compare/4.0.0...4.1.0?from_project_id=30285894)
