[!!!][TASK] Make M27-Download compatible with TYPO3v12 and PHP 8.3
The CType has changed from `starter_download` to `starter_m27_download`. An UpgradeWizard migrate the CType, but manuel configuration
in TypoScript and PageTypoScript must be changed manuel.

A default frontend template is defined for the extension EXT:starter_freya, have an initial output of this content element.

It's now also possible to use file collection records to create a download list. Single files and file collections can also mixed inside the content element.

--- a/documentation/docs/base/030_Changelog/v5.0.0.md
+++ b/documentation/docs/base/030_Changelog/v5.0.0.md
@@ -1,1 +1,5 @@
 # Changelog - v5.0.0 (dev-main)
+
+## BreakingChanges in v5.0.0
+
+- [Liste aller BreakingChanges](01_BreakingChanges/v5.0.0) inkl. detaillierter Beschreibung
